fix the leaderboard not shifting

--- a/source/styles/rgh.scss
+++ b/source/styles/rgh.scss
@@ -198,7 +198,7 @@ svg.octicon.octicon-bug, svg.octicon-commit, svg.octicon-flame {
 	
 	.rgh-milestone-report-container .rgh-metric-column .rgh-metric__chart {
 		width: 80%;
-		margin: 0 35px;
+		margin: 2px 35px;
 		
 		.progress-bar-small {
 			height: 10px;
